testdata/baselines/reference/submodule/conformance/typedefCrossModule3.errors.txt
mod2.js(4,1): error TS2309: An export assignment cannot be used in a module with other exported elements.


==== mod2.js (1 errors) ====
    /** @typedef {number} Foo */
    const ns = {};
    ns.Foo = class {}
    module.exports = ns;
    ~~~~~~~~~~~~~~~~~~~
!!! error TS2309: An export assignment cannot be used in a module with other exported elements.
    
    